clusters/my-cluster/audiobookshelf/audiobookshelf.yaml
# namespace
apiVersion: v1
kind: Namespace
metadata:
  name: audiobookshelf
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  namespace: audiobookshelf 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audiobookshelf
  template:
    metadata:
      labels:
        app: audiobookshelf
    spec:
      containers:
        - name: audiobookshelf
          image: ghcr.io/advplyr/audiobookshelf:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: audiobooks-volume
              mountPath: /audiobooks
      volumes:
        - name: audiobooks-volume
          nfs:
            server: 192.168.2.184
            path: /volume1/media
---
# service
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: audiobookshelf 
spec:
  selector:
    app: audiobookshelf
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
---
# ingress traeffik
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf
  namespace: audiobookshelf 
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: audiobookshelf.lab.jake-watson.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: audiobookshelf
                port:
                  number: 80
---
# traeffik http route
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: audiobookshelf-route
  namespace: audiobookshelf
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - abs.lab.jake-watson.co.uk
  rules:
    - backendRefs:
        - name: audiobookshelf
          port: 80
